test/libyul/yulSyntaxTests/variable_use_before_decl_2.yul
{
	let x := mul(2, x)
}

// ----
// DeclarationError 4990: (19-20): Variable x used before it was declared.
